# wolfies-executive-function

./: .gitignore  .gitmodules  .vercelignore  CLAUDE.md  Makefile  PERFORMANCE_COMPARISON.md  README.md  TWITTER_THREAD.md  planner.py  requirements.txt  vercel.json
Texting/: .gitignore  AGENTS.md  CLAUDE.md  INSTALLATION.md  MANIFEST.in  README.md  SETUP.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
Texting/.claude-plugin/: marketplace.json  plugin.json
Texting/Plans/: iMessage_MCP_Integration_2025-12-12.md
Texting/benchmarks/: COMPETITOR_DISCOVERY_REPORT.md  FINDINGS.md  RUN_COMPETITOR_BENCHMARKS.md  TEST_BENCHMARK_REPORT.md  __init__.py  bench_indexing.py  bench_search.py  benchmark_runner.py  competitor_benchmarks.csv  competitor_benchmarks.py  competitor_benchmarks_summary.tsv  competitor_tier_a.json  competitor_tier_a_e2e.json  competitor_tier_b.json  config.py  discover_competitors.py  install_competitors.py  mcp_toolcall_benchmarks.py  normalized_workload_benchmarks.py  run_benchmarks.py  rust_vs_python_benchmark.py  validator.py
Texting/benchmarks/results/: competitor_dryrun_20260107_043417.json  competitor_extended_no_npx_e2e.json  competitor_extended_noinstall.json  competitor_imsg_only.json  competitor_messages_cli.json  competitor_npx_cardmagic_1iter.json  competitor_npx_foxychat_1iter.json  competitor_npx_iflow_1iter.json  competitor_npx_mcp_ready.json  competitor_osx_messages_exporter_only.json  competitor_tier_a_e2e_v2.json  competitor_tier_a_e2e_v3.json  competitor_tier_a_e2e_v4.json  competitor_tier_a_with_imsg.json  competitor_tier_a_with_send.json  competitor_tier_a_with_send_run2.json  competitor_tier_b_e2e.json  discovery_20260107_040931.json  discovery_20260107_041029.json  discovery_20260107_041157.json  discovery_20260107_041316.json  discovery_20260107_055900.json  discovery_20260107_134900.json  extended_npx.json  extended_npx_ready.json  indexing_baseline.json  indexing_benchmarks.json  install_report_npm_batch1.json  install_report_pip_all_score10.json  install_report_pip_batch1.json  install_report_pip_batch2.json  mcp_toolcall_latency.json  mcp_toolcall_latency_mcp_server_imessage_safe.json  mcp_toolcall_latency_python_safe.json  mcp_toolcall_latency_python_safe_v2.json  mcp_toolcall_latency_session_all.json  mcp_toolcall_latency_session_all_v2.json  mcp_toolcall_latency_session_brew_v1.json  mcp_toolcall_latency_session_github_v3.json  mcp_toolcall_latency_session_with_github.json  (+68 more)
Texting/commands/: imessage.md
Texting/config/: contacts.example.json  contacts.json  mcp_server.json  templates.json
Texting/gateway/: BENCHMARKS.md  CLAUDE_CODE_INTEGRATION.md  DAEMON_DESIGN.md  DAEMON_SPEC.md  END_TO_END_BENCHMARKS.md  PERFORMANCE_SUMMARY.md  README.md  __init__.py  __version__.py  benchmark_results.json  benchmark_results_comprehensive.json  benchmarks.py  benchmarks_llm_canonical_with_daemon.json  benchmarks_quick.json  benchmarks_quick_with_daemon.json  benchmarks_quick_with_daemon_v2.json  benchmarks_quick_with_daemon_v3.json  benchmarks_rust_client_20iter.json  benchmarks_rust_client_20iter_manifest.json  build_rust_client.sh  imessage_client.py  imessage_daemon.py  imessage_daemon_client.py  output_utils.py
Texting/gateway/rust_client/: Cargo.toml
Texting/gateway/wolfies-client/: Cargo.toml  build.sh
Texting/gateway/wolfies-imessage/: .gitignore  Cargo.toml  PERFORMANCE_REPORT.md
Texting/mcp_server/: __init__.py  server.py
Texting/mcp_server_archive/: ARCHIVED.md  config.py  server.py  server_old_backup.py
Texting/mcp_server_archive/handlers/: __init__.py  analytics.py  contacts.py  groups.py  messaging.py  rag.py  (+1 more)
Texting/scripts/: audit_old_rag.py  bump_version.py  notify_follow_ups.py  reindex_rag.py  sync_contacts.py  test_mcp_protocol.py  test_mcp_tools.py  test_rag.py
Texting/src/: __init__.py  contacts_manager.py  contacts_sync.py  db_access.py  drafting.py  file_picker.py  messages_interface.py  scheduler.py  style_analyzer.py  templates.py
Texting/tests/: __init__.py  test_contacts_manager.py  test_contacts_sync.py  test_gateway_bundle.py  test_imessage_daemon_protocol.py  test_index_state.py  test_messages_interface.py  test_migration.py  test_performance.py  test_unified_imessage.py
(+329 files in other folders)
