[package]
name = "wolfies-daemon-client"
version = "0.1.0"
edition = "2021"
description = "Fast Rust client for the Wolfies iMessage daemon"
authors = ["Wolfgang Schoenberger"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
